zuban_python/tests/mypylike/tests/config.test
[case mypy_ini_exclude_simple]
# Copied from testCmdlineExclude
[file abc/apkg.py]
1()
[file b/bpkg.py]
1()  # E: "int" not callable
[file c/cpkg.py]
1()  # E: "int" not callable
[file mypy.ini]
\[mypy]
exclude = abc

[case mypy_toml_exclude_simple]
# Copied from testCmdlineExclude
[file abc/apkg.py]
1()
[file b/bpkg.py]
1()  # E: "int" not callable
[file c/cpkg.py]
1()  # E: "int" not callable
[file pyproject.toml]
\[tool.mypy]
exclude = "abc"

[case mypy_toml_exclude_list]
# Copied from testCmdlineExclude
[file abc/apkg.py]
1()
[file b/bpkg.py]
1()
[file c/cpkg.py]
1()  # E: "int" not callable
[file pyproject.toml]
\[tool.mypy]
exclude = [
    "abc",
    "b/.*pkg",
]

[case mypy_ini_exclude_multi_line_verbose_regex]
# Copied from testCmdlineExclude
[file abc/apkg.py]
1()
[file b/bpkg.py]
1()
[file c/cpkg.py]
1()  # E: "int" not callable
[file mypy.ini]
\[mypy]
exclude = (?x)(
    ^apkg\.py$    # files named "one.py"
    | ^b/   # or files starting with "three."
  )

[case mypy_ini_exclude_multi_line_verbose_regex_not_working]
# Copied from testCmdlineExclude
[file abc/apkg.py]
1()  # E: "int" not callable
[file b/bpkg.py]
1()  # E: "int" not callable
[file c/cpkg.py]
1()  # E: "int" not callable
[file mypy.ini]
\[mypy]
exclude = (
    ^apkg\.py$    # files named "one.py"
    | ^b/   # or files starting with "three."
  )

[case mypy_toml_exclude_with_overrides_inheritance]
# Copied from testCmdlineExclude
[file abc/a/apkg.py]
1()
[file abc/a/other.py]
1()  # E: "int" not callable
[file abc/a/inherited_exclude.py]
1()
[file abc/a/bpkg.py]
1()
[file abc/b/cpkg.py]
1()  # E: "int" not callable
[file pyproject.toml]
\[tool.mypy]
exclude = "abc/a.*pkg"
\[[tool.mypy.overrides]]
module = 'abc.a.*'
exclude = "inherited_exclude"
